integration-tests/src/test-cases/parse-error-duplicate-attrs/expected
parse error: from "negatives/duplicate-attrs/input", line 1:
| {
| ^
|
+-> Syntax error: while parsing object definition, duplicate attribute "a"
